--- a/GUI project/todo.txt
+++ b/GUI project/todo.txt
@@ -1,9 +1,14 @@
 arya
 prerna
 jain
-hello
-oh dearhello yeahclean the bag
+C++
+New Learning 
+Python
+Java
 fix the drawer
 my name is anthony
 hell
-hellbby
+New Learning
+New Learning
+
+Last message on it
